<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.a190729.jakubgeron.bmi.BMImainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/mass_kg"
            android:textSize="@dimen/values_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/mass_please"
            android:inputType="numberDecimal"
            android:textSize="@dimen/values_edit"

            />

        <TextView
            android:id="@+id/height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/height_cm"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/height_please"
            android:inputType="numberDecimal"
            android:textSize="@dimen/values_edit"

            />

        <Button
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="letCount"
            android:text="@string/count"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/default_color"
            android:textAllCaps="true"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="bottom"
            android:text="@string/mode_choice"
            android:textAppearance="?android:textAppearanceSmall"
            android:onClick="changeMode"
            />


    </LinearLayout>




</ScrollView>
