<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"

    tools:context="com.a190729.jakubgeron.bmi.AboutAuthorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"
            android:contentDescription="@string/about_author"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/my_legs" />

        <!--
        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" /> -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/some_name"
            android:textSize="@dimen/values_title"
            app:layout_constraintEnd_toStartOf="@id/textView2"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:ignore="MissingConstraints"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/my_name"
            android:textSize="@dimen/values_title"
            app:layout_constraintEnd_toEndOf="@id/something_about_content"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/something_about_content"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/something_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/something_about"
            android:textSize="@dimen/values_title"

            app:layout_constraintEnd_toEndOf="@id/textView"

            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/something_about_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"

            android:text="@string/about_me"
            android:textSize="@dimen/values_title"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/something_about"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            tools:ignore="MissingConstraints" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>
